# ai-engineering-best-practices

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  AI_ENGINEER_CHECKLIST.md  CONTRIBUTING.md  LEARNING_PATH.md  LICENSE  Makefile  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  README.md  ROADMAP.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval-gate.yml
agents/: README.md
ai-observability/: README.md
ai-security/: README.md
architecture-patterns/: README.md
async-patterns/: README.md
benchmarks/: README.md
core/: README.md  __init__.py
core/cache/: __init__.py  redis_cache.py
core/config/: __init__.py
core/eval/: __init__.py
core/guardrails/: __init__.py
core/llm/: __init__.py  client.py  router.py
core/prompts/: __init__.py
core/retry/: __init__.py
core/schemas/: __init__.py
core/telemetry/: __init__.py
cost-optimization/: QUICK_START.md  README.md  __init__.py
cost-optimization/batching/: README.md  __init__.py  concurrent_calls.py  embed_batching.py  request_coalescing.py
cost-optimization/batching/tests/: test_batching.py
cost-optimization/examples/: cost_optimization_demo.py
cost-optimization/model-routing/: README.md  __init__.py  adaptive_routing.py  cheap_first_router.py  fallback_strategy.py
cost-optimization/model-routing/tests/: test_routing.py
cost-optimization/prompt-caching/: README.md  __init__.py  anthropic_prompt_cache.py
cost-optimization/semantic-cache/: README.md  __init__.py  cache_demo.py
deployment/: README.md
diagrams/: README.md
docs/: README.md
enterprise-case-studies/: README.md
evaluation/: README.md
examples/: README.md  basic_usage.py
fundamentals/: README.md
fundamentals/01-llm-basics/: README.md  token_counting.py  tokenization_demo.py
fundamentals/01-llm-basics/tests/: test_token_counting.py
fundamentals/02-tokens-and-cost/: README.md  cost_calculator.py  model_comparison.py
fundamentals/02-tokens-and-cost/tests/: test_cost_calculator.py
fundamentals/03-sampling-params/: README.md  sampling_strategies.py  temperature_demo.py
fundamentals/03-sampling-params/tests/: test_sampling.py
fundamentals/04-context-windows/: README.md  context_pruning.py  sliding_window.py
fundamentals/04-context-windows/tests/: test_context.py
fundamentals/05-embeddings/: README.md  embedding_demo.py  similarity_search.py
fundamentals/05-embeddings/tests/: test_embeddings.py
guardrails/: README.md
infra/: README.md
interview-prep/: README.md
kubernetes/: README.md
latency-optimization/: README.md  __init__.py
latency-optimization/parallel-tool-calls/: concurrent_tools.py  parallel_embeddings.py
latency-optimization/speculative-decoding-notes/: README.md
latency-optimization/streaming/: sse_streaming.py
latency-optimization/streaming/tests/: test_sse.py
llmops/: README.md
memory/: README.md
multi-agent/: README.md
notebooks/: README.md
orchestration/: README.md
projects/: README.md
prompt-engineering/: PHASE_3_SUMMARY.md  README.md  __init__.py
prompt-engineering/anti-patterns/: README.md  examples.py
prompt-engineering/optimization/: README.md  __init__.py  auto_prompt_tuning.py  prompt_compression.py  token_reduction.py
prompt-engineering/optimization/tests/: test_token_reduction.py
prompt-engineering/patterns/: README.md  __init__.py  chain_of_thought.py  few_shot.py  react_pattern.py  self_consistency.py  zero_shot.py
prompt-engineering/patterns/tests/: test_patterns.py
prompt-engineering/templates/: README.md  __init__.py  meta_prompts.py  system_messages.py  template_system.py
prompt-engineering/templates/tests/: test_template_system.py
rag/: README.md
scripts/: README.md
streaming/: README.md
templates/: README.md
testing/: README.md
tests/: __init__.py  test_core.py  test_core_config.py  test_core_router.py  test_core_schemas.py
token-optimization/: README.md  __init__.py
token-optimization/compression/: README.md  summarization_pipelines.py  token_pruning.py
token-optimization/compression/tests/: test_summarization.py  test_token_pruning.py
token-optimization/context-pruning/: README.md  embedding_based_pruning.py  relevance_filtering.py
token-optimization/summarization-pipelines/: README.md  hierarchical_summary.py
vector-databases/: README.md
workflows/: README.md
