[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineering-best-practices"
version = "0.1.0"
description = "Production-grade handbook for modern AI engineering: LLMs, RAG, agents, observability, cost optimization."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AI Engineer", email = "ai-engineer@example.com" }]

dependencies = [
    # Core LLM
    "litellm>=1.38.0",
    "openai>=1.42.0",
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    
    # Structured outputs + validation
    "instructor>=1.4.0",
    
    # Async + HTTP
    "httpx>=0.27.0",
    "asyncio-contextmanager>=1.0.0",
    
    # Caching + storage
    "redis>=5.0.0",
    "psycopg>=3.1.0",  # PostgreSQL driver
    "pgvector>=0.2.4",  # pgvector Python client
    
    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-jaeger-thrift>=1.24.0",
    "opentelemetry-instrumentation>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    
    # Retry logic
    "tenacity>=8.3.0",
    
    # API + CLI
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "typer>=0.12.0",
    
    # Embeddings + retrieval
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",  # for cosine similarity, etc.
    
    # Data processing
    "pydantic-core>=2.20.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",  # structured logging
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# Development
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.3.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# LLM frameworks (optional)
frameworks = [
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
]

# Eval + benchmarking
eval = [
    "ragas>=0.1.0",
    "datasets>=2.18.0",
]

# Deployment
deploy = [
    "gunicorn>=21.2.0",
    "celery>=5.3.0",
]

# Docs
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

# All
all = [
    "ai-engineering-best-practices[dev,frameworks,eval,deploy,docs]"
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB/ai-engineering-best-practices"
Documentation = "https://ai-engineering-best-practices.readthedocs.io"
Repository = "https://github.com/YOUR_GITHUB/ai-engineering-best-practices.git"
Issues = "https://github.com/YOUR_GITHUB/ai-engineering-best-practices/issues"

[tool.setuptools]
packages = ["core", "fundamentals", "prompt_engineering", "rag", "agents"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (black handles it)
    "W503",   # line break before binary operator
]

[tool.ruff.lint.isort]
known-first-party = ["core", "fundamentals", "prompt_engineering", "rag", "agents"]
lines-after-imports = 2
multi-line-string-start-quote = '"'

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests", "core"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "--strict-markers -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_api: marks tests that require real API keys",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "pgvector.*",
    "redis.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["core"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
